# stores-sales-forecasting-poc

./: .gitignore  Makefile  README.md  pyproject.toml
config/: config.yaml  get_config.py
config/lstm/: lstm.yaml
config/optimizer/: base.yaml
config/pipeline/: base.yaml
config/prophet/: prophet.yaml
config/xgboost/: xgboost.yaml
logs/validation/: 2024-01-12 12:39:23
medium/: article.md  medium_article.docx
models_save/lstm/: lstm 2024-01-04-16-50-30.h5  lstm default_multivariate - 2024-01-22 13:06:43.h5  lstm default_simple - 2024-01-22 11:27:38.h5  lstm simple_batch_size_128_look_back_5 - 2024-01-23 09:34:14.h5  lstm simple_default_l1_0_01_l2_0_01 - 2024-01-23 10:20:43.h5  lstm.pkl
models_save/optim/: xgboost_best_hyperparameters.json
models_save/prophet/: prophet changepoint_prior_scale_0_5 - 2024-01-23 10:40:15.h5  prophet changepoint_prior_scale_0_5 - 2024-01-23 13:04:11.h5  prophet default - 2024-01-22 11:22:01.h5
models_save/scaler/ab205bc3f07e44c1ade6135645a7acff.h5/: scaler.h5
models_save/xgboost/: xgboost best_params_earthquake - 2024-02-07 14:40.h5  xgboost best_params_earthquake - 2024-02-09 13:39.h5  xgboost default - 2024-01-22 12:11:45.h5  xgboost default - 2024-02-12 14:25.h5  xgboost default - 2024-02-13 08:45.h5
notebooks/: Model results - Medium.ipynb  Model results - viz copy.ipynb  Model results - viz.ipynb  Model results 1.ipynb  Model results 2 - viz.ipynb  Model results 2.ipynb  Model results 3 - earthquake.ipynb  SHAP Val + Train.ipynb  SHAP.ipynb  Sales EDA.ipynb  lstm_explicability.ipynb  train_lstm.ipynb
notebooks/Article/: bigdata.xlsx  medium.ipynb  toto.ipynb
src/: __main__.py  main.py
src/eda/: data_explo.ipynb  processed_data_explo.ipynb
src/eda/.ipynb_checkpoints/: processed_data_explo-checkpoint.ipynb
src/models/: lstm.py  prepare_data.py  prophet.py  training_helpers.py  xgboost.py
src/pipeline/: factory.py  helpers.py  launcher.py  optim.py
src/preprocessing/: get_data.py  helpers.py  prepare_data.py  process_raw_data.py
