[tool.poetry]
name = "stores-sales-forecasting-poc"
version = "0.1"
description = ""
authors = ["acaille_lbc <acaille@littlebigcode.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.5.16"
pandas = "^2.1.4"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
keras = "^3.0.1"
joblib = "^1.3.2"
argparse = "^1.4.0"
hydra-core = "^1.3.2"
shap = "^0.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
