[tool.poetry]
name = "stores-sales-forecasting-poc"
version = "0.1"
description = ""
authors = ["acaille_lbc <acaille@littlebigcode.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
kaggle = "^1.5.16"
pandas = "^2.1.4"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
joblib = "^1.3.2"
argparse = "^1.4.0"
hydra-core = "^1.3.2"
shap = "^0.40.0"
# check out https://pypi.org/project/tensorflow-io-gcs-filesystem/ for more info
tensorflow-io-gcs-filesystem = { version = "0.25.0"}
tensorflow = "^2.8.0"
keras = "^2.8.0"
lime = "^0.2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
